--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ p.footer a:hover {
 						</li>
 						<li>
 							视觉吧福利姬
-							<a href="https://www.saozn.com/" target="_blank"><i>https://www.saozn.com</i></a>
+							<a href="https://shijueba.me/" target="_blank"><i>https://shijueba.me</i></a>
 							
 						</li>
 							<li>
@@ -382,7 +382,7 @@ p.footer a:hover {
 					
 			</div>
 		</div>
-		<p class="footer"><a href="https://zsba.me" target="_blank">© 2020视觉吧</a></p>
+		<p class="footer"><a href="https://zsba.me" target="_blank">© 2021视觉吧</a></p>
 	</div>		
 
 <div style="display:none"><script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278043507&web_id=1278043507"></script></div>
