--- a/index.html
+++ b/index.html
@@ -354,12 +354,12 @@ p.footer a:hover {
 						</li>
 							<li>
 							福利知识写真
-							<a href="https://www.lklk.net/" target="_blank"><i>https://www.lklk.net</i></a>
+							<a href="https://www.lklk.net/" target="_blank"><i>https://lklk.net</i></a>
 							
 						</li>
 							<li>
 						         麻豆视频
-							<a href="https://www.saozm.com/" target="_blank"><i>https://www.saozm.com</i></a>
+							<a href="https://www.saozm.com/" target="_blank"><i>https://saozm.com</i></a>
 							
 						</li>
                         <li>
