--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ p.footer a:hover {
 						</li>
 							<li>
 							福利知识写真
-							<a href="https://www.lklk.net/" target="_blank"><i>https://lklk.net</i></a>
+							<a href="https://fulibo.net/" target="_blank"><i>https://fulibo.net</i></a>
 							
 						</li>
 							<li>
