--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ p.footer a:hover {
 						</li>
 							<li>
 						         麻豆视频
-							<a href="https://www.saozm.com/" target="_blank"><i>https://saozm.com</i></a>
+							<a href="https://zhainb.com/" target="_blank"><i>https://zhainb.com</i></a>
 							
 						</li>
                      
