--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ p.footer a:hover {
 						</li>
 						<li>
 							视觉福利导航
-							<a href="https://www.zhain.me/" target="_blank"><i>https://www.zhain.me</i></a>
+							<a href="https://91zpc.com/" target="_blank"><i>https://91zpc.com</i></a>
 							
 						</li>
 						<li>
