--- a/index.html
+++ b/index.html
@@ -333,13 +333,13 @@ p.footer a:hover {
 							<span>多次更换域名给老朋友回家的路<span>
 						</span></span></li>
 					     <li>
-							永久发布地址
-							<a href="https://zsba.me/" target="_blank"><i>https://zsba.me</i></a>
+							请保存新的永久地址，旧的被大批污染了
+							<a href="http://zsba.cc/" target="_blank"><i>http://zsba.cc</i></a>
 							
 						</li>
 						<li>
-							备用发布地址
-							<a href="https://shijueba.net/" target="_blank"><i>https://shijueba.net</i></a>
+							备用永久地址旧的被大批污染了
+							<a href="http://zsba.vip/" target="_blank"><i>http://zsba.vip</i></a>
 							
 						</li>
 						<li>
