--- a/index.html
+++ b/index.html
@@ -333,12 +333,12 @@ p.footer a:hover {
 							<span>多次更换域名给老朋友回家的路<span>
 						</span></span></li>
 					     <li>
-							请保存新的永久地址，旧的被大批污染了
+							请保存新的永久地址旧已被屏蔽
 							<a href="http://zsba.cc/" target="_blank"><i>http://zsba.cc</i></a>
 							
 						</li>
 						<li>
-							备用永久地址旧的被大批污染了
+							备用永久地址旧已被屏蔽
 							<a href="http://zsba.vip/" target="_blank"><i>http://zsba.vip</i></a>
 							
 						</li>
