--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ p.footer a:hover {
 						</li>
 						<li>
 						         麻豆视频
-							<a href="https://madou.win/" target="_blank"><i>https://madou.win</i></a>
+							<a href="https://madou.vin/" target="_blank"><i>https://madou.vin</i></a>
 							
 						</li>
 						<li>
@@ -367,9 +367,9 @@ p.footer a:hover {
 					
 			</div>
 		</div>
-		<p class="footer"><a href="https://zsba.me" target="_blank">© 2021视觉吧</a></p>
+		<p class="footer"><a href="https://zsba.vip" target="_blank">© 2021视觉吧</a></p>
 	</div>		
 
-<div style="display:none"><script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1278043507&web_id=1278043507"></script></div>
+
 
 </body></html>
