--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ p.footer a:hover {
 						</li>
 						<li>
 						         麻豆视频
-							<a href="https://madou.vin/" target="_blank"><i>https://madou.vin</i></a>
+							<a href="https://madou.uno/" target="_blank"><i>https://madou.uno</i></a>
 							
 						</li>
 						<li>
