--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ p.footer a:hover {
 						</li>
 						<li>
 						         麻豆视频
-							<a href="https://madou.uno/" target="_blank"><i>https://madou.uno</i></a>
+							<a href="https://madou.run/" target="_blank"><i>https://madou.run</i></a>
 							
 						</li>
 						<li>
@@ -358,7 +358,7 @@ p.footer a:hover {
 							
 						</li>
 						<li>
-							<span>UC/夸克部分国产浏览器屏蔽网址，请安装chrome浏览器访问或火狐浏览器<span>
+							<span>部分国产浏览器屏蔽网址，请安装alook浏览器<span>
 						</span></span></li>
 						<li>
 							<span>本站只为海外华人提供服务，非法律允许地区以及18岁以下用户禁止访问！<span>
