--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ p.footer a:hover {
 						</li>
 						<li>
 						         麻豆视频
-							<a href="https://madou.run/" target="_blank"><i>https://madou.run</i></a>
+							<a href="https://madou.bid/" target="_blank"><i>https://madou.bid</i></a>
 							
 						</li>
 						<li>
@@ -367,7 +367,7 @@ p.footer a:hover {
 					
 			</div>
 		</div>
-		<p class="footer"><a href="https://zsba.vip" target="_blank">© 2021视觉吧</a></p>
+		<p class="footer"><a href="https://zsba.vip" target="_blank">© 2022视觉吧</a></p>
 	</div>		
 
 
