--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ p.footer a:hover {
 						</li>
 						<li>
 						         麻豆视频
-							<a href="https://madou.dev/" target="_blank"><i>https://madou.dev</i></a>
+							<a href="https://madou.kim/" target="_blank"><i>https://madou.kim</i></a
 							
 						</li>
 						<li>
