--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!-- saved from url=(0022)https://www.fulibo.net/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>视觉福利导航网发布页-火辣app大全</title>
+<title>麻豆视频永久发布页-火辣app大全</title>
 <meta name="keywords" content="视觉福利导航网,视觉知识博客,火辣app,视觉吧,福利吧,宅男吧,香蕉app">
 <meta name="description" content="视觉吧-视觉福利导航网,自上线以来就深受广大年轻人喜欢，主要专注于网络热门分享，收藏本站从此不再为夜里寂寞难耐，总为单身发愁啦！">
 <!-- for-mobile-apps -->
@@ -344,7 +344,7 @@ p.footer a:hover {
 						</li>
 						<li>
 						         麻豆视频
-							<a href="https://madou.kim/" target="_blank"><i>https://madou.kim</i></a
+							<a href="https://madou.mba/" target="_blank"><i>https://madou.mba</i></a
 							
 						</li>
 						<li>
